--- a/OldDriverManagerV2/App.xaml
+++ b/OldDriverManagerV2/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="WpfBlazor.App"
+﻿<Application x:Class="OldDriverManagerV2.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfBlazor"
+             xmlns:local="clr-namespace:OldDriverManagerV2"
              StartupUri="/WPF/MainWindow.xaml">
     <Application.Resources>
          
