--- a/OldDriverManagerV2/Razor/Credit.razor
+++ b/OldDriverManagerV2/Razor/Credit.razor
@@ -1,10 +1,10 @@
 ﻿<MudMainContent>
     <MudText Class="py-6" Align="Align.Center" Typo="Typo.h3">老司机管理器</MudText>
     <MudText Class="py-4" Align="Align.Center">
-        这是一个使用 WPF 以及 Blazor 的测试项目
+        这是一个使用 WPF 和 Blazor 的测试项目
     </MudText>
     <MudText Class="py-2" Align="Align.Center">
-        <MudIcon Icon="@Icons.Custom.Brands.GitHub" Size="Size.Small"/> 仓库地址：<MudLink Href="https://github.com/wu-Haitao/">GitHub</MudLink>
+        <MudIcon Icon="@Icons.Custom.Brands.GitHub" Size="Size.Small" /> 仓库地址：<MudLink Href="https://github.com/Wu-Haitao/OldDriverManagerV2">GitHub</MudLink>
     </MudText>
 </MudMainContent>
 
