--- a/OldDriverManagerV2/WPF/MainWindow.xaml
+++ b/OldDriverManagerV2/WPF/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:OldDriverManagerV2"
         xmlns:razor="clr-namespace:OldDriverManagerV2.Razor"
         mc:Ignorable="d"
-        Title="老司机管理器" Height="600" Width="1000" Icon="/driver.ico">
+        Title="老司机管理器" Height="600" Width="1000" Icon="/driver.ico" WindowStartupLocation="CenterScreen">
     <Grid>
         <blazor:BlazorWebView HostPage="wwwroot\index.html" Services="{DynamicResource services}">
             <blazor:BlazorWebView.RootComponents>
