--- a/OldDriverManagerV2/Razor/Movie.razor
+++ b/OldDriverManagerV2/Razor/Movie.razor
@@ -29,10 +29,9 @@
                 }
             }
             <MudDivider Class="my-4" />
-            <MudButton Class="mb-2" Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Material.Filled.PlayArrow" OnClick="@((e)=>OnPlayClicked(movie_index))">播放</MudButton>
-            <MudButton Class="mb-2" Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Material.Filled.DriveFileMove" OnClick="@((e)=>OnOpenPathClicked(movie_index))">打开文件所在路径</MudButton>
-            <MudButton Class="mb-2" Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Material.Filled.EditNote" OnClick="@((e)=>OnOpenNFOClicked(movie_index, movie.nfo))">编辑属性文件</MudButton>
-            <MudButton Class="mb-2" Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Material.Filled.Delete" OnClick="@((e)=>OnDeleteNFOClicked(movie_index, movie.nfo))">删除属性文件</MudButton>
+            <MudButton Class="mb-2" Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Material.Filled.PlayArrow" OnClick="@((e)=>OnPlayClicked(movie.file))">播放</MudButton>
+            <MudButton Class="mb-2" Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Material.Filled.DriveFileMove" OnClick="@((e)=>OnOpenPathClicked(movie.file))">打开文件所在路径</MudButton>
+            <MudButton Class="mb-2" Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Material.Filled.EditNote" OnClick="@((e)=>OnOpenNFOClicked(movie.nfo))">打开属性文件所在路径</MudButton>
 
         }
     </MudPaper>
@@ -43,17 +42,14 @@
 @inject ISnackbar Snackbar
 
 @code {
-    OldDriverManagerV2.Data.Movie? _movie; //随机模式下强制刷新
+    private OldDriverManagerV2.Data.Movie? _movie;
     [Parameter]
     public OldDriverManagerV2.Data.Movie? movie { set; get; }
-    [Parameter]
-    public int movie_index { set; get; }
 
     protected override async Task OnParametersSetAsync()
     {
-        if (movie == _movie) return;
-        else _movie = movie;
-
+        if (_movie == movie) return;
+        _movie = movie;
         await RefreshPage();
     }
 
@@ -96,39 +92,17 @@
         bool flag = MovieListHandler.PlayMovie(path);
         if (!flag) Snackbar.Add("文件不存在", Severity.Error, config => { config.HideIcon = true; });
     }
-    private void OnPlayClicked(int index)
-    {
-        bool flag = MovieListHandler.PlayMovie(index);
-        if (!flag) Snackbar.Add("文件不存在", Severity.Error, config => { config.HideIcon = true; });
-    }
 
     private void OnOpenPathClicked(string path)
     {
         bool flag = MovieListHandler.OpenPathOfMovie(path);
         if (!flag) Snackbar.Add("文件不存在", Severity.Error, config => { config.HideIcon = true; });
     }
-    private void OnOpenPathClicked(int index)
-    {
-        bool flag = MovieListHandler.OpenPathOfMovie(index);
-        if (!flag) Snackbar.Add("文件不存在", Severity.Error, config => { config.HideIcon = true; });
-    }
 
-    private void OnOpenNFOClicked(int index, string path)
+    private void OnOpenNFOClicked(string path)
     {
-        bool flag = MovieListHandler.OpenNFO(index, path);
+        bool flag = MovieListHandler.OpenPathOfFile(path);
         if (!flag) Snackbar.Add("文件不存在", Severity.Error, config => { config.HideIcon = true; });
-        /*else {
-            movie = MovieListHandler.movies[movie_index];
-            await RefreshPage();
-            Snackbar.Add("文件已修改", Severity.Success, config => { config.HideIcon = true; });
-        }*/
-    }
-
-    private void OnDeleteNFOClicked(int index, string path)
-    {
-        bool flag = MovieListHandler.DeleteNFO(index, path);
-        if (!flag) Snackbar.Add("文件不存在", Severity.Error, config => { config.HideIcon = true; });
-        else Snackbar.Add("文件已删除", Severity.Success, config => { config.HideIcon = true; });
     }
 
     private async Task RefreshPage()
